# lab_programmazione

./: CMakeLists.txt  Chat.cpp  Chat.h  Message.h  MessageNotification.cpp  MessageNotification.h  Observer.h  README.md  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  chatTest.cpp  messageNotificationTest.cpp  messageTest.cpp  runAllTests.cpp  userTest.cpp
